# vector-plot-extractor

./: .gitignore  .setup.py  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: Error_analysis.ipynb  tutorial-en.md
vpextractor/: __init__.py  _utils.py  data.py  disable_key.mplstyle  drawing.py  fileio.py  filter.py  generalUI.py  mplui.py  utils.py
